<resources>
    <string name="app_name">League Analysis Platform</string>
    <string name= "level">Level: </string>
    <string name="ranked">Ranked: </string>
    <string name="reload">Reload</string>
    <string name="perfect">Perfect</string>
    <string name="enter_your_summoner_name">Enter Your Summoner Name</string>
    <string name="analyze">Analyze</string>
    <string name="title_activity_display_message">League Analysis Platform</string>
    <string name="testInputRecievedBox">NA</string>
    <string name="there_is_a_box_here">there is a box here</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Match History</string>
    <string name="title_section2">Analysis</string>
    <string name="title_section3">temp</string>
    <string name="search">Search</string>
    <string name="match_history_string">You are in tab 1</string>
    <string name="screen_1">Screen 1</string>
    <string name="screen_2">Screen 2</string>
    <string name="champion_string">CHAMPION</string>
    <string name="num_played">Played</string>
    <string name="percent_won">% Won</string>
    <string name="num_won">W</string>
    <string name="num_lost">L</string>
    <string name="mastery"><b><u>Champion Mastery</u></b></string>
    <string name="load">Loading User Data...</string>
    <string name="favorites">Favorites:</string>
    <string name="profile_title">Unranked</string>
    <string name="ranked_flex">RANKED_FLEX_5x5</string>
    <string name="ranked_5x5">RANKED_SOLO_5x5</string>
    <string name="champion_view_overall_stats"> Overall Average Stats Per Game</string>
    <string name="number">###</string>
    <string name="champion_view_overall_stats_desc"> Average KDA</string>
    <string name="champion_view_average_kills_desc">Average Kills</string>
    <string name="champion_view_average_deaths_desc">Average Deaths</string>
    <string name="champion_view_average_assists_desc">Average Assists</string>
    <string name="champion_view_average_damage_desc">Average Damage</string>
    <string name="champion_view_average_pdamage_desc">Average Physical Damage</string>
    <string name="champion_view_average_mdamage_desc">Average Magic Damage</string>
    <string name="champion_view_average_dtaken_desc">Average Damage Taken</string>
    <string name="champion_view_average_heals_desc">Average Healing Done</string>
    <string name="champion_view_average_cs_desc">Average Creep Score</string>
    <string name="champion_view_average_gold_desc">Average Gold Earned</string>
    <string name="champion_view_average_wards_desc">Average Wards Placed</string>
    <string name="champion_view_victory">Victory</string>
    <string name="champion_view_defeat">Defeat</string>
    <string name="champion_view_remake">Remake</string>
    <string name="champion_view_overall_middle_title">(Per Game)</string>
    <string name="champion_view_overall_middle_kda">KDA</string>
    <string name="champion_view_overall_middle_deaths">Deaths</string>
    <string name="champion_view_overall_middle_kills">Kills</string>
    <string name="champion_view_overall_middle_assists">Assists</string>
    <string name="champion_view_overall_middle_cs">Creep Score</string>
    <string name="champion_view_overall_middle_gold">Gold Earned</string>
    <string name="champion_view_overall_middle_damage">Total Damage</string>
    <string name="champion_view_overall_middle_pdamage">Physical Damage</string>
    <string name="champion_view_overall_middle_mdamage">Magic Damage</string>
    <string name="champion_view_overall_middle_dtaken">Damage Taken</string>
    <string name="champion_view_overall_middle_heals">Healing Done</string>
    <string name="champion_view_overall_middle_wards">Wards Placed</string>
    <string name="match_view_players">player</string>
    <string name="match_view_kda">###/###/###</string>
    <string name="recents">Recent:</string>
    <string name="match_view_stats_title">Match Stats</string>
    <string name="match_view_stats_total_title">Totals</string>
    <string name="match_view_stats_total_dmg_desc">Damage Dealt To Champs</string>
    <string name="match_view_stats_total_dtaken_desc">Damage Taken</string>
    <string name="match_view_stats_total_pdmg_desc">Physical Dmg Dealt To Champs</string>
    <string name="match_view_stats_total_mdmg_desc">Magic Dmg Dealt To Champs</string>
    <string name="match_view_stats_total_creep_desc">Creep Score</string>
    <string name="match_view_stats_total_gold_desc">Gold Earned</string>
    <string name="match_view_stats_total_heals_desc">Units Healed</string>
    <string name="match_view_stats_total_wards_desc">Wards Placed</string>
    <string name="match_view_stats_team_title">Team Stats</string>
    <string name="match_view_stats_combined_title">Combined Stats</string>
    <string name="match_view_stats_time_title">Time Stats</string>
    <string name="match_view_stats_team_dmgpercent_desc">Percent Contribution To Team Damage</string>
    <string name="match_view_stats_team_goldpercent_desc">Percent Share of Team Gold</string>
    <string name="percent20">20%</string>
    <string name="match_view_stats_combined_dmggold_desc">Damage/Gold</string>
    <string name="extremelyinefficient">Extremely Inefficient</string>
    <string name="extremelyefficient">Extremely Efficient</string>
    <string name="efficient">Efficient</string>
    <string name="veryefficient">Very Efficient</string>
    <string name="veryinefficient">Very Inefficient</string>
    <string name="inefficient">Inefficient</string>
    <string name="action_feedback">Send Feedback</string>
    <string name="action_feedback_title">Please enter the feedback you wish to send to server:</string>
    <string name="submit"><b>Submit</b></string>\
    <string name="action_feedback_hint">please enter your feedback</string>

    <string name="tab_analysis">Summoner Analysis</string>
    <string name="tab_analysis_champpool">Champion Pool:</string>

    <string name="match_view_stats_combined_pdmggold_desc">Physical Damage/Gold</string>
    <string name="match_view_stats_combined_mdmggold_desc">Magic Damage/Gold</string>
    <string name="match_view_stats_combined_dmgkill_desc">Damage/Kill</string>
    <string name="match_view_stats_combined_goldkill_desc">Gold/Kill</string>
    <string name="match_view_stats_combined_golddeath_desc">Gold/Death</string>
    <string name="match_view_stats_combined_dtakendeath_desc">Damage Taken/Death</string>
    <string name="match_view_stats_combined_pdtakendeath_desc">Phys Dmg Taken/Death</string>
    <string name="match_view_stats_combined_mdtakendeath_desc">Magic Dmg Taken/Death</string>

    <string name="match_view_stats_time_stat1_desc">CS/Min</string>
    <string name="match_view_stats_time_stat2_desc">Gold/Min</string>
    <string name="match_view_stats_time_stat3_desc">Ward/Min</string>
    <string name="match_view_stats_time_stat4_desc">Dmg/Min</string>
    <string name="match_view_stats_time_stat5_desc">Physical Dmg/Min</string>
    <string name="match_view_stats_time_stat6_desc">Magic Dmg/Min</string>


</resources>
