<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".main.SendInputToHost" >
        <item
            android:id="@+id/action_settings"
            android:orderInCategory="400"
            android:title="@string/action_settings"
            app:showAsAction="collapseActionView"
            android:icon="@android:drawable/ic_menu_preferences"/>
        <item
            android:id="@+id/action_search"
            android:orderInCategory="100"
            android:title="@string/search"
            app:showAsAction="ifRoom"
            android:icon="@android:drawable/ic_menu_search"/>
        <item
            android:id="@+id/action_feedback"
            android:orderInCategory="300"
            android:title="@string/action_feedback"
            app:showAsAction="collapseActionView"
            android:icon="@android:drawable/ic_menu_upload"/>
        <item
            android:id="@+id/action_reload"
            android:orderInCategory="200"
            android:title="@string/reload"
            app:showAsAction="collapseActionView"
            android:icon="@android:drawable/ic_menu_rotate"/>
</menu>