<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/activity_layout">

    <RelativeLayout
        android:id="@+id/feedback_activity_layout"
        android:background="@color/win_color"
        android:layout_width="match_parent"
        android:minHeight="600dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/action_feedback_title"
            android:text="@string/action_feedback_title"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/action_feedback_edittext"
            android:layout_below="@id/action_feedback_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="30dp"
            android:hint="@string/action_feedback_hint"
            android:selectAllOnFocus="true"
            android:gravity="top|start"
            android:minLines="2"
            android:scrollbars="vertical"
            android:inputType="textMultiLine"
            android:textIsSelectable="true"
            android:ellipsize="start"
            style="@android:style/Widget.DeviceDefault.Light.EditText" />

        <Button
            android:text="@string/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/action_feedback_edittext"
            android:layout_centerHorizontal="true"
            android:id="@+id/button"
            android:onClick="sendFeedback"/>

    </RelativeLayout>

</ScrollView>